Slite changes to api and sql and created register page

--- a/WebSite/Pages/MainPage.html
+++ b/WebSite/Pages/MainPage.html
@@ -3,6 +3,13 @@
         <h1>Welcome To BattleShips</h1>
     </head>
     <body>
-        <p>TEMP</p>
+        <script src="/Scripts/ajax.js" async></script>
+        <script src="/Scripts/register.js" async></script>        
+        <form>
+            <h2 id="usernameLabel">Username</h2>
+            <input id="usernameTextBox" type="text"></input>
+            <br></br>
+            <input id="registerButton" type="button" value="Play Game" onclick="registerUser()"></input>
+        </form>
     </body>
 </html>
