--- a/WebSite/Pages/RoomPage.html
+++ b/WebSite/Pages/RoomPage.html
@@ -1,15 +1,21 @@
 <html>
-    <head>
-        <h1>Rooms</h1>
+    <head>        
     </head>
     <body>        
         <script src="/Scripts/ajax.js"></script>
+        <script src="/Scripts/room.js"></script>
         <from>
-            <h2 id="createLabel">Create</h2>
-            <input id="createTextBox" type="textbox"></input>
-            <br></br>
-            <input id="createButton" type="button" value="Create Rooom"></input>
-            <h2 id="roomListLabel">List</h2>
+            <div>
+                <h1 id="createLabel">Create</h1>
+                <input id="createTextBox" type="textbox"></input>
+                <br></br>
+                <input id="createButton" type="button" value="Create Rooom" onclick="createRoom()"></input>
+            
+            </div>
+            <h1 id="roomListLabel">List</h1>       
+            <div id="roomDiv">
+                         
+            </div>
         </from>
     </body>
 </html>
