basic setup features have been aded and updated a bit of sql and the api

--- a/WebSite/Pages/SetupPage.html
+++ b/WebSite/Pages/SetupPage.html
@@ -1,12 +1,17 @@
 <html>
     <head>
-        <h1>Settup board</h1>
+        <h1>Setup board</h1>
     </head>
     <body>
         <script src="/Scripts/ajax.js"></script>
-        <script src="/Scripts/boardSetup.js"></script>
+        <script src="/Scripts/boardSetup.js"></script>        
+        <div id="board"></div>
         <form>
-            
+            <input id="5ship" name="ship" type="button" value="5 Ship"></input>
+            <input id="4ship" name="ship" type="button" value="4 Ship"></input>
+            <input id="3ship" name="ship" type="button" value="3 Ship"></input>
+            <input id="2ship" name="ship" type="button" value="2 Ship"></input>
+            <input id="readyCheckBox" type="checkbox" value="ready">Ready</input>
         </form>
     </body>
 </html>
