Working on the game page.

--- a/WebSite/Pages/GamePage.html
+++ b/WebSite/Pages/GamePage.html
@@ -1,11 +1,12 @@
 <html>
     <head>
-        <h1>Game</h1>
+        <h1>Game</h1>        
     </head>
     <body>
+        <h2 id="gameStatus">Host Turn</h2>
         <script src="/Scripts/ajax.js"></script>
         <script src="/Scripts/game.js"></script>        
-        <div id="playerBoard"></div>
         <div id="enemyBoard"></div>
+        <div id="playerBoard"></div>        
     </body>
 </html>
